# gMorph

./: .azure-pipelines.yml  Cargo.toml  README.md  aliases.js  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
benches/: mul.rs
examples/: break.rs  client1.rs  client2.rs  dot_product.rs  generate.rs  inversion.rs  linalg.rs  plain.rs  serde.rs  serde_cbor.rs  server.rs  simple.rs  simple_add.rs  simple_mul.rs
gmorph/: all.html  index.html  sidebar-items.js
gmorph/enc/: index.html  sidebar-items.js  struct.Enc.html  struct.KeyPair.html  trait.Decrypt.html  trait.Encrypt.html
gmorph/encode/: index.html  sidebar-items.js  struct.Encoded.html  trait.Decode.html  trait.Encode.html
gmorph/encrypt/: index.html  sidebar-items.js  struct.KeyPair.html  trait.Decrypt.html  trait.Encrypt.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/arith/: trait.Add.js  trait.AddAssign.js  trait.Mul.js  trait.MulAssign.js
implementors/gmorph/encrypt/: trait.Decrypt.js
implementors/num_traits/identities/: trait.One.js  trait.Zero.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: client1.rs  client2.rs  enc.rs  encode.rs  encrypt.rs  lib.rs  mod231.rs  q231.rs  quaternion.rs  server.rs  vector.rs
src/algebra/: m231.rs  mod.rs  q231.rs  quaternion.rs
src/gmorph/: enc.rs.html  encode.rs.html  encrypt.rs.html  lib.rs.html
src/gmorph/algebra/: m231.rs.html  mod.rs.html  q231.rs.html  quaternion.rs.html
src/mod231/: m231.rs  mod.rs  q231.rs
