[package]
name = "gmorph"
version = "0.1.0"
authors = ["Marcin Benke <marcin.benke@golem.network>", "Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
nalgebra = { git = "https://github.com/kubkon/nalgebra.git", branch = "noncommutative", features = ["serde-serialize"] }
alga = "0.9"
alga_derive = "0.9"
modinverse = "0.1"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gwasm-api = { path = "../gwasm-runner/gwasm-api" }
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.8"
