[package]
name = "gmorph"
version = "0.1.0"
authors = ["Marcin Benke <marcin.benke@golem.network>", "Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/golemfactory/gmorph"
homepage = "https://github.com/golemfactory/gmorph"
documentation = "https://docs.rs/gmorph"
description = "Fully homomorphic encryption library for gWasm"

[dependencies]
num-traits = "0.2"
nalgebra = { version = "0.20", features = ["serde-serialize"] }
alga = "0.9"
alga_derive = "0.9"
modinverse = "0.1"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
experimental-normalize = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_cbor = "0.10.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.8"

[badges]
maintenance = { status = "actively-developed" }